--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,33 +5,35 @@ name: Node.js CI
 
 on:
   push:
-    branches: ['main']
-    tags: ['*']
+    branches: ["main"]
+    tags: ["*"]
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Use Node.js 20.x
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
-          cache: 'yarn'
+          cache: "yarn"
       - name: Install dependencies
         run: yarn install --immutable
       - name: Lint code
-        run: yarn eslint .
+        run: yarn run lint
       - name: Build code
         run: yarn run build
       - name: Test code
         run: yarn test
-      - name: SonarCloud Scanning
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - uses: actions/cache@v2
         id: package-build
@@ -52,8 +54,10 @@ jobs:
           key: ${{ github.sha }}
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "20.x"
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@ssuf1998dev"
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
