--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "goreleaser-npm-publisher",
+  "name": "@ssuf1998dev/goreleaser-npm-publisher",
   "version": "1.1.0-1.0.0",
   "description": "Build and publish npm packages based on goreleaser output folder",
-  "bin": "dist/cli.cjs",
+  "bin": {
+    "goreleaser-npm-publisher": "dist/cli.cjs"
+  },
   "main": "dist/index.cjs",
   "type": "module",
   "author": {
@@ -33,8 +35,8 @@
   "scripts": {
     "build": "NODE_ENV=production tsup",
     "build:dev": "NODE_ENV=development tsup",
-    "start": "node dist/index.js",
-    "run": "tsup && node dist/index.js",
+    "start": "node dist/cli.cjs",
+    "run": "tsup && node dist/cli.cjs",
     "lint": "eslint .",
     "watch": "tsup --watch",
     "test": "jest"
