--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -57,6 +57,6 @@ jobs:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
           scope: "@ssuf1998dev"
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
